Added goldminer, till i organise the code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <body>
-<h1> Welcome to Hemanth's github</h1>
+	<h1> Welcome to Hemanth's github</h1>
+	<h2> Coding coming soon till then keep minning :O)<h2>
+	<object width="550" height="400">
+<param name="game" value="goldminer.swf">
+<embed src="goldminer.swf" width="550" height="400">
+</embed>
+</object>
 </body>
 </html>
