First cut index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <html>
 <body>
-	<h1> Welcome to Hemanth's github</h1>
-	<h2> Coding coming soon till then keep minning :O)<h2>
-	<object width="550" height="400">
-<param name="game" value="goldminer.swf">
-<embed src="goldminer.swf" width="550" height="400">
-</embed>
-</object>
+    <h1> Welcome to Hemanth's github</h1>
+    <b> The below the list of expriments i have done, each are self annotative </b>
+    <i> All under GNU GPLv3 </i>
+    <p>
+    cli-twitpic.bash  
+    google-sun.bash    
+    tomcat-crt.sh
+	extractor.sh	  
+	image-resize.tgz   
+	realtimewallpaper.bash  
+	twitty.bash
+	fastdb-gui.bash   
+	index.html.bash    
+	rename.tgz 
+	wallpaper.bash
+	fix-dep.tgz	  	  
+	insert2mysql.bash  
+	rss-template.sh	     
+	xkcd.bash
+	format-media.tgz  
+	mutt.conf	     
+	rsstwit.rb		     
+	zenpinger.bash
+	geolocation.py	  
+	oracle.sh	     
+	rsstwitt.py
+	getmevido.bash	  
+	plot.sh	     
+	sendmail.pl
+	go.bash		  	  
+	randomNumber.rb    
+	skyfish.sh
+	</p>
+<b> Get the code : git clone git://github.com/hemanth/futhark.git</b>
+<i> Do update, edit and share</i>
 </body>
 </html>
