--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-<body>
+<head>
 <a href="http://githhub.com/hemanth/futhark.git">
 <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" style="position: absolute; top: 0pt; left: 0pt; border: 0pt none;"></a>
+</head>
+<body>
     <h1> Welcome to Hemanth's github</h1>
     <b> The below the list of expriments i have done, each are self annotative </b>
     <i> All under GNU GPLv3 </i>
