--- a/web-components/coder-wall/index.html
+++ b/web-components/coder-wall/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Custom element to get npm info</title>
     <script src="bower_components/platform/platform.js"></script>
-    <link rel="import" href="src/npm-info.html">
+    <link rel="import" href="src/coder-wall.html">
     <style>
     
             
