--- a/web-components/about-me/about-me.html
+++ b/web-components/about-me/about-me.html
@@ -2,19 +2,18 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 <!--
-Gets info from IMDB for the given movie name.
+A custom element for about me info with social media links.
 
 ##### Example
 
-<about-me me="Hemanth.HM" info="Computer ploygot, web + CLI + FOSS <3'r"
+    <about-me me="Hemanth.HM" info="Computer ploygot, web + CLI + FOSS <3'r"
        gplus="hemanthhm42" twitter="gnumanth" github="hemanth" blog="h3manth.com">
-</about-me>
+    </about-me>
 
 @element about-me
 @blurb A custom element for about me info with social media links.
 @status stable
 @homepage http://github.com/hemanth/about-me
-info gplus twitter github blog"
 -->
 <polymer-element name="about-me" attributes="me info gplus twitter github blog">
 
@@ -35,11 +34,47 @@ info gplus twitter github blog"
   <script>
 
       Polymer('about-me', {
+          /**
+          * Your name.
+          *
+          * @attribute me
+          * @type string
+          */
           me : '',
+          /**
+          * About yourself.
+          *
+          * @attribute info
+          * @type string
+          */
           info : '',
+          /**
+          * Your G+ name.
+          *
+          * @attribute gplus
+          * @type string
+          */
           gplus : '',
+          /**
+          * Your twitter handler.
+          *
+          * @attribute twitter
+          * @type string
+          */
           twitter : '',
+          /**
+          * Your github handler.
+          *
+          * @attribute github
+          * @type string
+          */
           github: '',
+          /**
+          * Your website/blog URL.
+          *
+          * @attribute blog
+          * @type string
+          */
           blog: ''
     });
   </script>
