--- a/web-components/about-me/about-me.html
+++ b/web-components/about-me/about-me.html
@@ -25,7 +25,7 @@ A custom element for about me info with social media links.
         <h1> {{me}}   </h1>
         <p> {{info}}  </p>
         <p> <a class="icon-google-plus" href="http://plus.google.com/+{{gplus}}"> G+</a></p>
-        <p> <a class="icon-twitter" href="http://twitter.com/{{twitter}"> Twitter</a> </p>
+        <p> <a class="icon-twitter" href="http://twitter.com/{{twitter}}"> Twitter</a> </p>
         <p> <a class="icon-code-fork" href="http://github.com/{{github}}"> Github</a></p>
         <p> <a class="icon-bookmark" href="http://{{blog}}"> Blog</a></p>
       </div>
@@ -77,6 +77,7 @@ A custom element for about me info with social media links.
           */
           blog: ''
     });
+    debugger;
   </script>
 
 </polymer-element>
