Added the required polyfill.

--- a/web-components/video-bg/demo.html
+++ b/web-components/video-bg/demo.html
@@ -7,6 +7,6 @@
     <link rel="import" href="./video-bg.html">
 </head>
 <body>
-    <video-bg src="http://is.gd/ZGoiBg" muted="muted"></video-bg>
+    <video-bg src="http://is.gd/YuseLZ" muted="muted"></video-bg>
 </body>
 </html>
